--- a/web/style.css
+++ b/web/style.css
@@ -1,23 +1,8 @@
-/*.container {*/
-/*    margin: 1pc;*/
-/*    padding: 10px;*/
-/*    width: 250px;*/
-/*    height: 250px;*/
-/*    border: 1px solid black;*/
-/*    border-radius: 10px;*/
-/*}*/
-
 .card {
-    min-height: 225px;
+    height: 225px;
 }
 
-/*.container h3 {*/
-/*    font-size: 20px;*/
-/*    margin: 0;*/
-/*    text-align: center;*/
-/*}*/
-
-/*button {*/
-/*    border: none;*/
-/*    border-radius: 5px;*/
-/*}*/
+.card-text-container {
+    height: 175px;
+    overflow-y: auto;
+}
