--- a/web/style.css
+++ b/web/style.css
@@ -2,14 +2,6 @@
     --med-gray: #808080;
 }
 
-.card {
-    height: 225px;
-}
-
-.card-text-container {
-    height: 209px;
-    overflow-y: auto;
-}
 
 input {
     border: 1px solid gray !important;
@@ -21,19 +13,10 @@ input::placeholder {
     color: var(--med-gray) !important;
 }
 
-.bi-star-fill, .bi-star {
+.bi-star-fill,
+.bi-star {
     font-size: 75%;
-    /*padding-right: 3%;*/
-    /*padding-left: 3%;*/
     color: var(--med-gray);
-    /*text-align: center;*/
-
-
-}
-
-li button {
-    /*padding: 0 !important;*/
-    /*margin: 0 !important;*/
 }
 
 .h-list {
@@ -68,17 +51,15 @@ li button {
     color: #dcdcdc;
 }
 
-input:focus, input.form-control:focus {
+input:focus,
+input.form-control:focus {
     /*removing that awful blue border*/
     outline: none;
     box-shadow: none;
 }
 
-.input-group {
-    /*padding-bottom: 16px;*/
-}
-
-.move-up-btn, .move-down-btn {
+.move-up-btn,
+.move-down-btn {
     padding-left: 5px;
     padding-right: 5px;
 }
@@ -88,9 +69,19 @@ input:focus, input.form-control:focus {
 }
 
 #track_container {
-    height: 175px;
-    overflow-y: auto;
+    overflow-y: scroll;
     overflow-x: hidden;
     padding: 0;
-    margin-bottom: 0;
+    margin-bottom: 20px;
+    display: block;
+    height: 115px;
+}
+
+.card {
+    max-height: 500px;
+}
+
+.card-text-container {
+    height: 300px;
+    overflow-y: scroll;
 }
