--- a/web/style.css
+++ b/web/style.css
@@ -1,5 +1,6 @@
 :root {
     --med-gray: #808080;
+    --bg: #212528;
 }
 
 
@@ -52,7 +53,8 @@ input::placeholder {
 }
 
 input:focus,
-input.form-control:focus {
+input.form-control:focus,
+input:focus {
     /*removing that awful blue border*/
     outline: none;
     box-shadow: none;
@@ -69,12 +71,11 @@ input.form-control:focus {
 }
 
 #track_container {
-    overflow-y: scroll;
     overflow-x: hidden;
     padding: 0;
-    margin-bottom: 20px;
     display: block;
     height: 115px;
+    overflow-y: scroll;
 }
 
 .card {
@@ -84,4 +85,21 @@ input.form-control:focus {
 .card-text-container {
     height: 300px;
     overflow-y: scroll;
+    z-index: 0;
+}
+
+.container-of-track-container-sigh {
+    display: block;
+    height: 130px;
+    margin-bottom: 20px;
+    z-index: 1;
+    border-radius: 7px;
+    margin-bottom: 10px;
+    /* border: 1px solid var(--med-gray); */
+    box-shadow: inset 60px 0 120px #373d439d, inset -00px 0 120px #000000a2;
+    padding: 3%;
+}
+
+.glow-light {
+    box-shadow: 0 0 1px 1px var(--med-gray);
 }
